--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ nav {
   gap: 2rem;
   list-style: none;
   font-size: 1.5rem;
+  
 }
-
 a {
   color: black;
   text-decoration: none;
@@ -281,6 +281,7 @@ section {
 .about-containers,
 .about-details-container {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .about-pic {
@@ -290,7 +291,7 @@ section {
 .arrow {
   position: absolute;
   right: -5rem;
-  bottom: 2.5rem;
+  top: 2.5rem;
 }
 
 .details-container {
@@ -301,6 +302,11 @@ section {
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
   text-align: center;
+  transition: all 150ms ease-in;
+}
+.details-container:hover{
+  transform: scale(1.02);
+  filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.5));
 }
 
 .section-container {
