--- a/style.css
+++ b/style.css
@@ -292,6 +292,10 @@ section {
   position: absolute;
   right: -5rem;
   top: 2.5rem;
+  transition: all .3s ease;
+}
+.arrow:hover{
+  transform: scale(1.6);
 }
 
 .details-container {
@@ -404,16 +408,21 @@ article .icon {
   background: (250, 250, 250);
   margin: 2rem auto;
   padding: 0.5rem;
+  transition: all .3s ease;
+  flex-direction: column;
 }
 
 .contact-info-container {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   gap: 0.5rem;
   margin: 1rem;
+  
 }
-
+.contact-info-upper-container:hover{
+  transform: scale(1.2);
+}
 .contact-info-container p {
   font-size: larger;
 }
