--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ p {
   color: rgb(85, 85, 85);
 }
 
+
+
+
 /* TRANSITION */
 
 a,
@@ -217,7 +220,7 @@ section {
 
 .btn-container {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   gap: 1rem;
 }
 
