--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ a:hover {
 }
 
 .logo {
-  font-size: 2rem;
+  /* font-size: 2rem; */
 }
 
 .logo:hover {
@@ -220,16 +220,25 @@ section {
 
 .btn-container {
   display: flex;
-  /* justify-content: center; */
+  justify-content: center;
   gap: 1rem;
 }
 
 .btn {
-  font-weight: 600;
-  transition: all 300ms ease;
-  padding: 1rem;
-  width: 8rem;
-  border-radius: 2rem;
+    box-shadow: 8px 8px 20px #6d6d6d21;
+    display: flex;
+    height: 30px;
+    font-weight: 500;
+    width: 130px;
+    text-align: start;
+    align-items: center;
+    border-radius: 30px;
+    padding: 20px;
+    background-color: #4947473a;
+    transition: .5s;
+    border: 2px solid #000;
+    border-right: 3px solid #000;
+    cursor: pointer;
 }
 
 .btn-color-1,
